--- a/SVM_Model.ipynb
+++ b/SVM_Model.ipynb
@@ -18,8 +18,8 @@
      "text": [
       "Requirement already satisfied: sklearn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from sklearn) (0.24.2)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n",
       "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (2.2.0)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n"
      ]
@@ -936,34 +936,34 @@
       "[CV 5/5] END ...................C=1, gamma=0.01;, score=0.836 total time=   0.1s\n",
       "[CV 1/5] END .................C=5, gamma=0.0001;, score=0.881 total time=   0.1s\n",
       "[CV 2/5] END .................C=5, gamma=0.0001;, score=0.855 total time=   0.1s\n",
-      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.875 total time=   0.1s\n",
+      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.875 total time=   0.2s\n",
       "[CV 4/5] END .................C=5, gamma=0.0001;, score=0.850 total time=   0.1s\n",
       "[CV 5/5] END .................C=5, gamma=0.0001;, score=0.862 total time=   0.2s\n",
-      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.881 total time=   0.1s\n",
+      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.881 total time=   0.2s\n",
       "[CV 2/5] END ..................C=5, gamma=0.001;, score=0.855 total time=   0.1s\n",
       "[CV 3/5] END ..................C=5, gamma=0.001;, score=0.875 total time=   0.1s\n",
       "[CV 4/5] END ..................C=5, gamma=0.001;, score=0.850 total time=   0.1s\n",
-      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.862 total time=   0.1s\n",
+      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.862 total time=   0.2s\n",
       "[CV 1/5] END ...................C=5, gamma=0.01;, score=0.881 total time=   0.1s\n",
       "[CV 2/5] END ...................C=5, gamma=0.01;, score=0.855 total time=   0.1s\n",
       "[CV 3/5] END ...................C=5, gamma=0.01;, score=0.875 total time=   0.1s\n",
       "[CV 4/5] END ...................C=5, gamma=0.01;, score=0.850 total time=   0.1s\n",
-      "[CV 5/5] END ...................C=5, gamma=0.01;, score=0.862 total time=   0.1s\n",
+      "[CV 5/5] END ...................C=5, gamma=0.01;, score=0.862 total time=   0.2s\n",
       "[CV 1/5] END ................C=10, gamma=0.0001;, score=0.891 total time=   0.2s\n",
-      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.858 total time=   0.2s\n",
+      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.858 total time=   0.1s\n",
       "[CV 3/5] END ................C=10, gamma=0.0001;, score=0.884 total time=   0.2s\n",
       "[CV 4/5] END ................C=10, gamma=0.0001;, score=0.854 total time=   0.1s\n",
       "[CV 5/5] END ................C=10, gamma=0.0001;, score=0.866 total time=   0.2s\n",
       "[CV 1/5] END .................C=10, gamma=0.001;, score=0.891 total time=   0.2s\n",
-      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.858 total time=   0.1s\n",
+      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.858 total time=   0.2s\n",
       "[CV 3/5] END .................C=10, gamma=0.001;, score=0.884 total time=   0.2s\n",
       "[CV 4/5] END .................C=10, gamma=0.001;, score=0.854 total time=   0.1s\n",
-      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.866 total time=   0.1s\n",
+      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.866 total time=   0.2s\n",
       "[CV 1/5] END ..................C=10, gamma=0.01;, score=0.891 total time=   0.2s\n",
-      "[CV 2/5] END ..................C=10, gamma=0.01;, score=0.858 total time=   0.1s\n",
+      "[CV 2/5] END ..................C=10, gamma=0.01;, score=0.858 total time=   0.2s\n",
       "[CV 3/5] END ..................C=10, gamma=0.01;, score=0.884 total time=   0.2s\n",
       "[CV 4/5] END ..................C=10, gamma=0.01;, score=0.854 total time=   0.1s\n",
-      "[CV 5/5] END ..................C=10, gamma=0.01;, score=0.866 total time=   0.1s\n"
+      "[CV 5/5] END ..................C=10, gamma=0.01;, score=0.866 total time=   0.2s\n"
      ]
     },
     {
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1041,19 +1041,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'your_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-7ffc35e2dc82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'your_name.sav'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mjoblib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myour_model\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'your_model' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['SVM.sav']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1062,8 +1061,8 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'your_name.sav'\n",
-    "joblib.dump(your_model, filename)"
+    "filename = 'SVM.sav'\n",
+    "joblib.dump(model, filename)"
    ]
   },
   {
