Saved final model

--- a/Forest_Model.ipynb
+++ b/Forest_Model.ipynb
@@ -18,9 +18,9 @@
      "text": [
       "Requirement already satisfied: sklearn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from sklearn) (0.24.2)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (2.2.0)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n",
       "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n"
      ]
     }
@@ -792,25 +792,25 @@
     {
      "data": {
       "text/plain": [
-       "[(0.12956366631597505, 'koi_model_snr'),\n",
-       " (0.12881102431793684, 'koi_fpflag_nt'),\n",
-       " (0.1263354568759267, 'koi_fpflag_co'),\n",
-       " (0.10088421965755237, 'koi_fpflag_ss'),\n",
-       " (0.07513444980812499, 'koi_prad'),\n",
-       " (0.05253512291583858, 'koi_depth'),\n",
-       " (0.04796934720998672, 'koi_fpflag_ec'),\n",
-       " (0.044388186793070904, 'koi_period'),\n",
-       " (0.040915894744440184, 'koi_impact'),\n",
-       " (0.03276864057237575, 'koi_teq'),\n",
-       " (0.03009645412684217, 'koi_time0bk'),\n",
-       " (0.029873969927795986, 'koi_duration'),\n",
-       " (0.028733205233935178, 'koi_insol'),\n",
-       " (0.02476468524168816, 'koi_steff'),\n",
-       " (0.022297284019034087, 'ra'),\n",
-       " (0.02165708475199831, 'koi_kepmag'),\n",
-       " (0.021511227352858826, 'koi_srad'),\n",
-       " (0.02149136334170323, 'dec'),\n",
-       " (0.02026871679291596, 'koi_slogg')]"
+       "[(0.1330412469704479, 'koi_model_snr'),\n",
+       " (0.12912775516230365, 'koi_fpflag_nt'),\n",
+       " (0.12445768086268622, 'koi_fpflag_co'),\n",
+       " (0.09534851165588523, 'koi_fpflag_ss'),\n",
+       " (0.0726971345950565, 'koi_prad'),\n",
+       " (0.054815723578201365, 'koi_depth'),\n",
+       " (0.050489400935595306, 'koi_period'),\n",
+       " (0.04675326565707169, 'koi_fpflag_ec'),\n",
+       " (0.04203871880535739, 'koi_impact'),\n",
+       " (0.031868622692840215, 'koi_teq'),\n",
+       " (0.03134469765691763, 'koi_duration'),\n",
+       " (0.029977367693873873, 'koi_insol'),\n",
+       " (0.02851714012813965, 'koi_time0bk'),\n",
+       " (0.024532001456906503, 'koi_steff'),\n",
+       " (0.022402826542728127, 'ra'),\n",
+       " (0.021171781630664844, 'dec'),\n",
+       " (0.02097926335932868, 'koi_srad'),\n",
+       " (0.020922480900138263, 'koi_kepmag'),\n",
+       " (0.01951437971585706, 'koi_slogg')]"
       ]
      },
      "execution_count": 10,
@@ -1000,15 +1000,15 @@
      "output_type": "stream",
      "text": [
       "Training Data Score: 1.0\n",
-      "Testing Data Score: 0.8935926773455377\n",
+      "Testing Data Score: 0.8924485125858124\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     confirmed       0.81      0.75      0.78       411\n",
+      "     confirmed       0.81      0.74      0.77       411\n",
       "false positive       0.80      0.83      0.82       484\n",
       "     candidate       0.98      1.00      0.99       853\n",
       "\n",
       "      accuracy                           0.89      1748\n",
-      "     macro avg       0.87      0.86      0.86      1748\n",
+      "     macro avg       0.86      0.86      0.86      1748\n",
       "  weighted avg       0.89      0.89      0.89      1748\n",
       "\n"
      ]
@@ -1060,26 +1060,26 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
-      "[CV 1/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.910 total time=   5.0s\n",
-      "[CV 2/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.895 total time=   5.0s\n",
-      "[CV 3/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.883 total time=   4.2s\n",
-      "[CV 4/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.885 total time=   4.3s\n",
-      "[CV 5/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.885 total time=   4.3s\n",
-      "[CV 1/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.907 total time=   4.3s\n",
+      "[CV 1/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.908 total time=   3.8s\n",
+      "[CV 2/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.897 total time=   4.0s\n",
+      "[CV 3/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.880 total time=   4.5s\n",
+      "[CV 4/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.886 total time=   4.2s\n",
+      "[CV 5/5] END max_features=auto, min_samples_split=2, n_estimators=400;, score=0.882 total time=   4.3s\n",
+      "[CV 1/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.907 total time=   4.2s\n",
       "[CV 2/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.896 total time=   4.2s\n",
-      "[CV 3/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.883 total time=   4.3s\n",
+      "[CV 3/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.882 total time=   4.2s\n",
       "[CV 4/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.881 total time=   4.1s\n",
-      "[CV 5/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.882 total time=   4.2s\n",
-      "[CV 1/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.909 total time=   3.4s\n",
-      "[CV 2/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.894 total time=   2.7s\n",
+      "[CV 5/5] END max_features=auto, min_samples_split=4, n_estimators=400;, score=0.882 total time=   2.7s\n",
+      "[CV 1/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.905 total time=   2.8s\n",
+      "[CV 2/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.899 total time=   2.6s\n",
       "[CV 3/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.880 total time=   2.6s\n",
-      "[CV 4/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.884 total time=   2.5s\n",
-      "[CV 5/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.879 total time=   2.5s\n",
-      "[CV 1/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.907 total time=   2.6s\n",
-      "[CV 2/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.892 total time=   2.6s\n",
-      "[CV 3/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.883 total time=   2.6s\n",
-      "[CV 4/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.883 total time=   2.5s\n",
-      "[CV 5/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.874 total time=   2.5s\n"
+      "[CV 4/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.886 total time=   2.5s\n",
+      "[CV 5/5] END max_features=sqrt, min_samples_split=2, n_estimators=400;, score=0.885 total time=   2.5s\n",
+      "[CV 1/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.904 total time=   2.7s\n",
+      "[CV 2/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.893 total time=   2.7s\n",
+      "[CV 3/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.880 total time=   2.6s\n",
+      "[CV 4/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.879 total time=   2.5s\n",
+      "[CV 5/5] END max_features=sqrt, min_samples_split=4, n_estimators=400;, score=0.881 total time=   2.6s\n"
      ]
     },
     {
@@ -1110,8 +1110,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_features': 'auto', 'min_samples_split': 2, 'n_estimators': 400}\n",
-      "0.891662543025346\n"
+      "{'max_features': 'sqrt', 'min_samples_split': 2, 'n_estimators': 400}\n",
+      "0.8909000938734819\n"
      ]
     }
    ],
@@ -1129,25 +1129,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Score: 1.0\n",
-      "Testing Data Score: 0.8930205949656751\n",
       "                precision    recall  f1-score   support\n",
       "\n",
-      "     confirmed       0.81      0.74      0.78       411\n",
-      "false positive       0.80      0.84      0.82       484\n",
+      "     confirmed       0.81      0.75      0.78       411\n",
+      "false positive       0.81      0.84      0.82       484\n",
       "     candidate       0.98      1.00      0.99       853\n",
       "\n",
       "      accuracy                           0.89      1748\n",
-      "     macro avg       0.86      0.86      0.86      1748\n",
+      "     macro avg       0.87      0.86      0.86      1748\n",
       "  weighted avg       0.89      0.89      0.89      1748\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Training Data Score: {grid.score(X_train_scaled, encoded_y_train)}\")\n",
-    "print(f\"Testing Data Score: {grid.score(X_test_scaled, encoded_y_test)}\")\n",
-    "\n",
     "# Make predictions with hypertuned model\n",
     "predictions = grid.predict(X_test_scaled)\n",
     "print(classification_report(encoded_y_test, predictions, \n",
