--- a/LR_Model.ipynb
+++ b/LR_Model.ipynb
@@ -18,10 +18,10 @@
      "text": [
       "Requirement already satisfied: sklearn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from sklearn) (0.24.2)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (2.2.0)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n"
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n"
      ]
     }
    ],
@@ -943,14 +943,14 @@
       "Fitting 5 folds for each of 15 candidates, totalling 75 fits\n",
       "[CV 1/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.830 total time=   0.2s\n",
       "[CV 2/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.800 total time=   0.2s\n",
-      "[CV 3/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.805 total time=   0.2s\n",
+      "[CV 3/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.805 total time=   0.3s\n",
       "[CV 4/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.804 total time=   0.2s\n",
       "[CV 5/5] END C=100, max_iter=500, penalty=l2, solver=newton-cg;, score=0.815 total time=   0.2s\n",
-      "[CV 1/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.830 total time=   0.7s\n",
+      "[CV 1/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.830 total time=   1.0s\n",
       "[CV 2/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.800 total time=   0.6s\n",
       "[CV 3/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.805 total time=   0.6s\n",
-      "[CV 4/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.804 total time=   0.6s\n",
-      "[CV 5/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.815 total time=   0.6s\n",
+      "[CV 4/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.804 total time=   0.7s\n",
+      "[CV 5/5] END C=100, max_iter=500, penalty=l2, solver=lbfgs;, score=0.815 total time=   0.8s\n",
       "[CV 1/5] END C=100, max_iter=500, penalty=l2, solver=liblinear;, score=0.822 total time=   0.0s\n",
       "[CV 2/5] END C=100, max_iter=500, penalty=l2, solver=liblinear;, score=0.797 total time=   0.0s\n",
       "[CV 3/5] END C=100, max_iter=500, penalty=l2, solver=liblinear;, score=0.795 total time=   0.0s\n",
@@ -958,14 +958,14 @@
       "[CV 5/5] END C=100, max_iter=500, penalty=l2, solver=liblinear;, score=0.810 total time=   0.0s\n",
       "[CV 1/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.823 total time=   0.1s\n",
       "[CV 2/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.797 total time=   0.1s\n",
-      "[CV 3/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.800 total time=   0.1s\n",
+      "[CV 3/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.800 total time=   0.2s\n",
       "[CV 4/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.802 total time=   0.1s\n",
-      "[CV 5/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.811 total time=   0.1s\n",
+      "[CV 5/5] END C=10, max_iter=500, penalty=l2, solver=newton-cg;, score=0.811 total time=   0.2s\n",
       "[CV 1/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.823 total time=   0.3s\n",
-      "[CV 2/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.797 total time=   0.2s\n",
+      "[CV 2/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.797 total time=   0.3s\n",
       "[CV 3/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.800 total time=   0.3s\n",
       "[CV 4/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.802 total time=   0.3s\n",
-      "[CV 5/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.811 total time=   0.2s\n",
+      "[CV 5/5] END C=10, max_iter=500, penalty=l2, solver=lbfgs;, score=0.811 total time=   0.3s\n",
       "[CV 1/5] END C=10, max_iter=500, penalty=l2, solver=liblinear;, score=0.816 total time=   0.0s\n",
       "[CV 2/5] END C=10, max_iter=500, penalty=l2, solver=liblinear;, score=0.795 total time=   0.0s\n",
       "[CV 3/5] END C=10, max_iter=500, penalty=l2, solver=liblinear;, score=0.797 total time=   0.0s\n",
@@ -978,9 +978,9 @@
       "[CV 5/5] END C=1, max_iter=500, penalty=l2, solver=newton-cg;, score=0.806 total time=   0.1s\n",
       "[CV 1/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.814 total time=   0.1s\n",
       "[CV 2/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.795 total time=   0.0s\n",
-      "[CV 3/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.803 total time=   0.0s\n",
-      "[CV 4/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.796 total time=   0.0s\n",
-      "[CV 5/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.806 total time=   0.0s\n",
+      "[CV 3/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.803 total time=   0.1s\n",
+      "[CV 4/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.796 total time=   0.1s\n",
+      "[CV 5/5] END C=1, max_iter=500, penalty=l2, solver=lbfgs;, score=0.806 total time=   0.1s\n",
       "[CV 1/5] END C=1, max_iter=500, penalty=l2, solver=liblinear;, score=0.806 total time=   0.0s\n",
       "[CV 2/5] END C=1, max_iter=500, penalty=l2, solver=liblinear;, score=0.792 total time=   0.0s\n",
       "[CV 3/5] END C=1, max_iter=500, penalty=l2, solver=liblinear;, score=0.800 total time=   0.0s\n",
@@ -1066,8 +1066,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Score: 0.8132748426473393\n",
-      "Testing Data Score: 0.8054919908466819\n",
       "                precision    recall  f1-score   support\n",
       "\n",
       "     confirmed       0.61      0.55      0.58       411\n",
@@ -1082,9 +1080,6 @@
     }
    ],
    "source": [
-    "print(f\"Training Data Score: {grid.score(X_train_scaled, encoded_y_train)}\")\n",
-    "print(f\"Testing Data Score: {grid.score(X_test_scaled, encoded_y_test)}\")\n",
-    "\n",
     "# Make predictions with hypertuned model\n",
     "predictions = grid.predict(X_test_scaled)\n",
     "print(classification_report(encoded_y_test, predictions, \n",
@@ -1102,34 +1097,16 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['LogisticRegression.sav']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save your model by updating \"your_name\" with your name\n",
     "# and \"your_model\" with your model variable\n",
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
-    "import joblib\n",
-    "filename = 'LogisticRegression.sav'\n",
-    "joblib.dump(model, filename)"
+    "#import joblib\n",
+    "#filename = 'LogisticRegression.sav'\n",
+    "#joblib.dump(model, filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
