--- a/SVM_Model.ipynb
+++ b/SVM_Model.ipynb
@@ -19,8 +19,8 @@
       "Requirement already satisfied: sklearn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: scikit-learn in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from sklearn) (0.24.2)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (2.2.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
       "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\users\\robin\\anaconda3\\envs\\pythonadv\\lib\\site-packages (from scikit-learn->sklearn) (1.0.1)\n"
      ]
     }
@@ -1083,51 +1083,51 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n",
-      "[CV 1/5] END .................C=1, gamma=0.0001;, score=0.665 total time=   1.6s\n",
-      "[CV 2/5] END .................C=1, gamma=0.0001;, score=0.646 total time=   1.4s\n",
-      "[CV 3/5] END .................C=1, gamma=0.0001;, score=0.642 total time=   1.3s\n",
-      "[CV 4/5] END .................C=1, gamma=0.0001;, score=0.645 total time=   1.3s\n",
-      "[CV 5/5] END .................C=1, gamma=0.0001;, score=0.656 total time=   1.3s\n",
-      "[CV 1/5] END ..................C=1, gamma=0.001;, score=0.665 total time=   1.3s\n",
-      "[CV 2/5] END ..................C=1, gamma=0.001;, score=0.646 total time=   1.3s\n",
-      "[CV 3/5] END ..................C=1, gamma=0.001;, score=0.642 total time=   1.3s\n",
-      "[CV 4/5] END ..................C=1, gamma=0.001;, score=0.645 total time=   1.6s\n",
-      "[CV 5/5] END ..................C=1, gamma=0.001;, score=0.656 total time=   1.3s\n",
-      "[CV 1/5] END ...................C=1, gamma=0.01;, score=0.665 total time=   1.3s\n",
-      "[CV 2/5] END ...................C=1, gamma=0.01;, score=0.646 total time=   1.3s\n",
-      "[CV 3/5] END ...................C=1, gamma=0.01;, score=0.642 total time=   1.3s\n",
-      "[CV 4/5] END ...................C=1, gamma=0.01;, score=0.645 total time=   1.2s\n",
-      "[CV 5/5] END ...................C=1, gamma=0.01;, score=0.656 total time=   1.3s\n",
-      "[CV 1/5] END .................C=5, gamma=0.0001;, score=0.678 total time=   1.2s\n",
-      "[CV 2/5] END .................C=5, gamma=0.0001;, score=0.678 total time=   1.1s\n",
-      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.652 total time=   1.1s\n",
-      "[CV 4/5] END .................C=5, gamma=0.0001;, score=0.660 total time=   1.1s\n",
-      "[CV 5/5] END .................C=5, gamma=0.0001;, score=0.690 total time=   1.1s\n",
-      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.678 total time=   1.1s\n",
-      "[CV 2/5] END ..................C=5, gamma=0.001;, score=0.678 total time=   1.1s\n",
-      "[CV 3/5] END ..................C=5, gamma=0.001;, score=0.652 total time=   1.1s\n",
-      "[CV 4/5] END ..................C=5, gamma=0.001;, score=0.660 total time=   1.1s\n",
-      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.690 total time=   1.2s\n",
-      "[CV 1/5] END ...................C=5, gamma=0.01;, score=0.678 total time=   1.1s\n",
-      "[CV 2/5] END ...................C=5, gamma=0.01;, score=0.678 total time=   1.2s\n",
-      "[CV 3/5] END ...................C=5, gamma=0.01;, score=0.652 total time=   1.3s\n",
-      "[CV 4/5] END ...................C=5, gamma=0.01;, score=0.660 total time=   1.3s\n",
-      "[CV 5/5] END ...................C=5, gamma=0.01;, score=0.690 total time=   1.1s\n",
-      "[CV 1/5] END ................C=10, gamma=0.0001;, score=0.682 total time=   1.0s\n",
-      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.688 total time=   1.1s\n",
-      "[CV 3/5] END ................C=10, gamma=0.0001;, score=0.660 total time=   1.1s\n",
-      "[CV 4/5] END ................C=10, gamma=0.0001;, score=0.665 total time=   1.1s\n",
-      "[CV 5/5] END ................C=10, gamma=0.0001;, score=0.691 total time=   1.2s\n",
-      "[CV 1/5] END .................C=10, gamma=0.001;, score=0.682 total time=   1.1s\n",
-      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.688 total time=   1.2s\n",
-      "[CV 3/5] END .................C=10, gamma=0.001;, score=0.660 total time=   1.2s\n",
-      "[CV 4/5] END .................C=10, gamma=0.001;, score=0.665 total time=   1.1s\n",
-      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.691 total time=   1.2s\n",
-      "[CV 1/5] END ..................C=10, gamma=0.01;, score=0.682 total time=   1.1s\n",
-      "[CV 2/5] END ..................C=10, gamma=0.01;, score=0.688 total time=   1.1s\n",
-      "[CV 3/5] END ..................C=10, gamma=0.01;, score=0.660 total time=   1.1s\n",
-      "[CV 4/5] END ..................C=10, gamma=0.01;, score=0.665 total time=   1.1s\n",
-      "[CV 5/5] END ..................C=10, gamma=0.01;, score=0.691 total time=   1.1s\n"
+      "[CV 1/5] END .................C=1, gamma=0.0001;, score=0.665 total time=   1.3s\n",
+      "[CV 2/5] END .................C=1, gamma=0.0001;, score=0.646 total time=   1.0s\n",
+      "[CV 3/5] END .................C=1, gamma=0.0001;, score=0.642 total time=   0.8s\n",
+      "[CV 4/5] END .................C=1, gamma=0.0001;, score=0.645 total time=   0.9s\n",
+      "[CV 5/5] END .................C=1, gamma=0.0001;, score=0.656 total time=   0.8s\n",
+      "[CV 1/5] END ..................C=1, gamma=0.001;, score=0.665 total time=   0.8s\n",
+      "[CV 2/5] END ..................C=1, gamma=0.001;, score=0.646 total time=   0.8s\n",
+      "[CV 3/5] END ..................C=1, gamma=0.001;, score=0.642 total time=   0.8s\n",
+      "[CV 4/5] END ..................C=1, gamma=0.001;, score=0.645 total time=   0.8s\n",
+      "[CV 5/5] END ..................C=1, gamma=0.001;, score=0.656 total time=   0.8s\n",
+      "[CV 1/5] END ...................C=1, gamma=0.01;, score=0.665 total time=   0.8s\n",
+      "[CV 2/5] END ...................C=1, gamma=0.01;, score=0.646 total time=   0.8s\n",
+      "[CV 3/5] END ...................C=1, gamma=0.01;, score=0.642 total time=   0.8s\n",
+      "[CV 4/5] END ...................C=1, gamma=0.01;, score=0.645 total time=   0.8s\n",
+      "[CV 5/5] END ...................C=1, gamma=0.01;, score=0.656 total time=   0.9s\n",
+      "[CV 1/5] END .................C=5, gamma=0.0001;, score=0.678 total time=   0.9s\n",
+      "[CV 2/5] END .................C=5, gamma=0.0001;, score=0.678 total time=   0.9s\n",
+      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.652 total time=   0.9s\n",
+      "[CV 4/5] END .................C=5, gamma=0.0001;, score=0.660 total time=   1.0s\n",
+      "[CV 5/5] END .................C=5, gamma=0.0001;, score=0.690 total time=   1.2s\n",
+      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.678 total time=   0.8s\n",
+      "[CV 2/5] END ..................C=5, gamma=0.001;, score=0.678 total time=   0.8s\n",
+      "[CV 3/5] END ..................C=5, gamma=0.001;, score=0.652 total time=   0.9s\n",
+      "[CV 4/5] END ..................C=5, gamma=0.001;, score=0.660 total time=   0.8s\n",
+      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.690 total time=   0.7s\n",
+      "[CV 1/5] END ...................C=5, gamma=0.01;, score=0.678 total time=   0.7s\n",
+      "[CV 2/5] END ...................C=5, gamma=0.01;, score=0.678 total time=   0.8s\n",
+      "[CV 3/5] END ...................C=5, gamma=0.01;, score=0.652 total time=   0.8s\n",
+      "[CV 4/5] END ...................C=5, gamma=0.01;, score=0.660 total time=   0.6s\n",
+      "[CV 5/5] END ...................C=5, gamma=0.01;, score=0.690 total time=   0.7s\n",
+      "[CV 1/5] END ................C=10, gamma=0.0001;, score=0.682 total time=   0.9s\n",
+      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.688 total time=   1.0s\n",
+      "[CV 3/5] END ................C=10, gamma=0.0001;, score=0.660 total time=   0.7s\n",
+      "[CV 4/5] END ................C=10, gamma=0.0001;, score=0.665 total time=   0.7s\n",
+      "[CV 5/5] END ................C=10, gamma=0.0001;, score=0.691 total time=   0.8s\n",
+      "[CV 1/5] END .................C=10, gamma=0.001;, score=0.682 total time=   0.8s\n",
+      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.688 total time=   0.7s\n",
+      "[CV 3/5] END .................C=10, gamma=0.001;, score=0.660 total time=   0.7s\n",
+      "[CV 4/5] END .................C=10, gamma=0.001;, score=0.665 total time=   0.8s\n",
+      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.691 total time=   0.9s\n",
+      "[CV 1/5] END ..................C=10, gamma=0.01;, score=0.682 total time=   0.8s\n",
+      "[CV 2/5] END ..................C=10, gamma=0.01;, score=0.688 total time=   0.9s\n",
+      "[CV 3/5] END ..................C=10, gamma=0.01;, score=0.660 total time=   1.0s\n",
+      "[CV 4/5] END ..................C=10, gamma=0.01;, score=0.665 total time=   0.9s\n",
+      "[CV 5/5] END ..................C=10, gamma=0.01;, score=0.691 total time=   0.7s\n"
      ]
     },
     {
@@ -1176,8 +1176,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Data Score: 0.681098607667366\n",
-      "Testing Data Score: 0.6704805491990846\n",
       "                precision    recall  f1-score   support\n",
       "\n",
       "     confirmed       0.54      0.42      0.47       411\n",
@@ -1192,9 +1190,6 @@
     }
    ],
    "source": [
-    "print(f\"Training Data Score: {grid.score(X_train_scaled, encoded_y_train)}\")\n",
-    "print(f\"Testing Data Score: {grid.score(X_test_scaled, encoded_y_test)}\")\n",
-    "\n",
     "# Make predictions with hypertuned model\n",
     "predictions = grid.predict(X_test_scaled)\n",
     "print(classification_report(encoded_y_test, predictions,\n",
@@ -1212,34 +1207,16 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['SVM.sav']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save your model by updating \"your_name\" with your name\n",
     "# and \"your_model\" with your model variable\n",
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
-    "import joblib\n",
-    "filename = 'SVM.sav'\n",
-    "joblib.dump(model, filename)"
+    "#import joblib\n",
+    "#filename = 'SVM.sav'\n",
+    "#joblib.dump(model, filename)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
